2000-12-15  Petr Mikulik  <mikulik@physics.muni.cz>

	* README.exp: remove section about 'mouse is experimental'.

	* src/term.c: removed obsolete routine 'fill_gp4mouse'.

	* src/command.c: removed an OS/2 switch for readline vs. readline_ipc.

2000-12-12  Johannes Zellner  <johannes@zellner.org>

	* src/tables.c, src/show.c: corrected a bug so that
	x2zeroaxis works again.

2000-12-08  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/datafile.c (df_3dmatrix): implement missing 'index' option
 	for 'matrix'-type splot datafiles. 'index' increases for every
 	blank or comment-only line, as both terminate mesh reading in
 	df_read_matrix().
	
	* docs/gnuplot.doc: document this.

2000-12-08  Petr Mikulik  <mikulik@physics.muni.cz>

	* term/gif.trm: don't crash on pm3d in multiplot (reuse the previous
	colour palette if no more colours are available).

2000-12-06  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/color.c term/post.trm docs/gnuplot.doc: support 'set palette
	maxcolors <n>' also for postscript terminal (allow discrete filled
	contour-like steps).
	
2000-12-06  Johannes Zellner  <johannes@zellner.org>

	* term/ggi.trm, configure.in:
	prepared for using wmh if it's available.

2000-12-05  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/graphics.c (boundary): move the setup_tics() calls of the x
 	axes above the code that applies 'set size ratio'. Otherwise, the
 	auto-extension of ranges can distort the aspect ratio.

2000-12-05  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/win.trm: un-comment the mouse function dummy entries in the
	terminal entry.

	* src/win/wgraph.c: include "getcolor.h". Fixes bug in Win32-pm3d
 	handling reported by Petr Mikulik.

	* src/win/wgnuplib.h (farmalloc): make this macro definition
 	active for Borland C++ compilers higher than a certain version.

	* src/hidden3d.c (split_line_at_ratio): changed vertex arguments